# pico-devkit

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
resources/pong/: win.py
resources/test/: bitmap_1d.py  show_bitmap_1d.py
src/: engine.py  picoscroll.py  utime.py
src/devkit/pygame/: __init__.py  picoscroll.py
src/devkit/stubs/micropython/: utime.py
src/devkit/stubs/pimoroni/: picoscroll.py
tests/devkit/pygame/: test_picoscroll.py
tests/devkit/pygame/picoscroll/: conftest.py  test_e2e_pong.py  test_set_pixel.py  test_show_bitmap_1d.py
tests/devkit/stubs/: test_picoscroll.py  test_utime.py
tests/engine/: test_clock.py  test_frame_ticker.py  test_rate_limiter.py
tests/pong/: test_ball.py  test_main.py
